fix img spacing

--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,8 @@
   
   .image-container {
     border: 5px solid #F2B880;
+    justify-content:center;
+    gap: 30px;
     padding: 10px;
     margin-top: 10px;
     text-align: center;
@@ -523,7 +525,7 @@ p {
 .modal-content {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
     flex-wrap: wrap;
     background-color: var(--bg-color);
     color: var(--text-color);
@@ -562,9 +564,8 @@ p {
     border-radius: 5px;
 }
 .modal-content .modal-pdf {
-    max-width: 80%;
+    max-width: 1200px;
     width: auto; /* Full width */
-    height: 600px; /* Adjust height as needed */
     margin: 1rem 0;
     border: 2px solid var(--accent-color);
     border-radius: 5px;
